# rust_stock_tracker

./: Cargo.toml  HashMap.txt  LICENSE  README.md  structure-guide.txt
src/: command.rs  error.rs  lib.rs  main.rs  stock.rs  user.rs
stock/: Cargo.toml
stock/src/: lib.rs
stock_tracker/: .Cargo.toml.swp  Cargo.toml
stock_tracker/src/: lib.rs  main.rs  tmpixdjt8  tmpj03dkr  user.rs
user/: Cargo.toml
user/src/: lib.rs
