[package]
name = "user"
version = "0.1.0"
authors = ["turchiad <turchiad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0"
stock = { path = "../stock" }
